[tool.poetry]
name = "nautobot-security-image"
version = "0.1.0"
description = "Nautobot image with security libraries."
authors = ["Calvin Remsburg <cremsburg.dev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^22.8.0"
flake8 = "^5.0.4"
invoke = "^1.7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
